# densky-old

./: .gitignore  .gitmodules  Cargo.toml  README.md  install.ps1  install.sh  justfile  test_files
.github/workflows/: build.yml  deploy.yml  test-drive.yml
clouds/http-router/: .gitignore  Cargo.toml  deno.json  runtime.ts
clouds/http-router/runtime/: dev.ts  error.ts  hooks.ts  import_map.json  request.ts  response.ts  types.ts
clouds/http-router/runtime/services/cookies/: mod.ts  signer.ts
clouds/http-router/src/: context.rs  file_resolve.rs  lib.rs  manifest.rs
clouds/http-router/src/_manifest/: mod.rs
clouds/http-router/src/processor/: discover.rs  mod_test.rs  parser.rs  tree_test.rs
clouds/views/: Cargo.toml
clouds/views/src/: lib.rs
docs/: .stylelintrc.json  README.md  app.config.ts  astro.config.mjs  bun.lockb  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
docs/components/: Logo.vue
docs/components/content/: FileTree.vue  TreeFile.vue  TreeFolder.client.vue
docs/content/: 0.index.md
docs/content/1.overview/: 1.getting-started.md  2.first-file.md  3.view.md
docs/content/2.routing/: 1.overview.md  _dir.yml
docs/public/: install.sh  inter.font.css
docs/src/assets/: landing.css
docs/src/components/: Breadcrumb.astro  Card.astro  CardGroup.astro  Footer.astro  Navbar.astro  Page.astro  Pagination.astro  Sidebar.astro  TOC.astro  (+3 more)
example_server/: .gitignore  .im.densky.json  build.ts  config.ts  deno.json  deno.jsonc  densky.toml  dev.ts  import_map.json  import_map.prod.json  main.ts
example_server/src/: outFunction.ts
(+68 files in other folders)
