[package]
name = "cloud-views"
description = "HTML views cloud for Densky Framework"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/Densky-Framework/densky"
documentation = "https://densky.apika.me"
repository = "https://github.com/Densky-Framework/densky"

[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
densky-adapter = { workspace = true }
